    * [UIMA-1464] - SimpleServer NOTICE file missing JSR 173 attribution
    * [UIMA-1528] - The documentation describes still the UEAStemmer, which was removed from the distribution
    * [UIMA-1530] - Index naming is not unique in multithreaded scenarios
    * [UIMA-1533] - Lucas generated test-sources jar missing license, notice, disclaimer
    * [UIMA-1546] - Fix sandbox notice and license files
    * [UIMA-1547] - XML problems with simple server test cases
    * [UIMA-1551] - Lucas PearPackagingMavenPlugin PEAR classpath is incorrect
    * [UIMA-1552] - Lucas: does not compile with Java 1.5
    * [UIMA-1554] - Fix CFE notice and license file
    * [UIMA-1557] - LuceneCASIndexer.xml should be in src/test/resources
    * [UIMA-1558] - LuceneCASIndexerTest fails if the created LuceneCASIndexer procsess a CAS
    * [UIMA-1571] - FsVariables book_name should be FsVariablesUserGuide instead of fsVariablesUserGuide
    * [UIMA-1572] - Lucas artifactId does not match folder name in svn
    * [UIMA-1582] - SimpleServer ConfigTest fails
    * [UIMA-1595] - Change build of Sandbox RegExpr to use xmlbean maven plugin, and delete its lib dir
    * [UIMA-1596] - fix sandbox build - use of <profile> for conditional not working for child projects
    * [UIMA-1597] - in sandbox common build, change needed to use assembly-bin instead of bin

** Improvement
    * [UIMA-991] - fix Sandbox documentation to avoid overflowing the footer on even pages
    * [UIMA-992] - update dictionary annotator build documentation - how to create XML Beans jar
    * [UIMA-1005] - create ant build for XMLBeans class generation
    * [UIMA-1016] - allow URLs as dictionary files
    * [UIMA-1301] - Update documentation, log problems when dictionary entries don't load, remove diagnostic message during dictionary loading
    * [UIMA-1336] - allow multiple dictionary entries to match against a single string
    * [UIMA-1370] - Lucas: add the usual suspects to svnignore