@@ -143,6 +143,7 @@ issues you find at
     
 
 
+
         Release Notes - UIMA - Version 2.3S
         
 <h2>        Bug
@@ -206,6 +207,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1533'>UIMA-1533</a>] -         Lucas generated test-sources jar missing license, notice, disclaimer
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1535'>UIMA-1535</a>] -         Lucas POM issues
+</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1546'>UIMA-1546</a>] -         Fix sandbox notice and license files
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1547'>UIMA-1547</a>] -         XML problems with simple server test cases
@@ -231,6 +234,14 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1596'>UIMA-1596</a>] -         fix sandbox build - use of &lt;profile&gt; for conditional not working for child projects
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1597'>UIMA-1597</a>] -         in sandbox common build, change needed to use assembly-bin instead of bin
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1605'>UIMA-1605</a>] -         Fixed Findbugs issues
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1609'>UIMA-1609</a>] -         binary assembly wrongly including FOP files
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1615'>UIMA-1615</a>] -         make build-from-sources work
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1639'>UIMA-1639</a>] -         Fixed bugs which disabled compiled dicts, static dict attributes
 </li>
 </ul>
     
@@ -261,6 +272,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1501'>UIMA-1501</a>] -         more refactoring and updating - parent POMs
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1506'>UIMA-1506</a>] -         update Bean Scripting Framework Annotator with info about licenses and documentation
+</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1517'>UIMA-1517</a>] -         Don't set executable bits on non-executables, when building assemblies
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1527'>UIMA-1527</a>] -         Upgrade Tika Annotator for 2.3.0 release
@@ -281,6 +294,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1583'>UIMA-1583</a>] -         Regularize Sandbox builds and assembly
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1585'>UIMA-1585</a>] -         Run RAT on projects, fix missing licenses, add RAT running to POM, document exclusions
+</li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1586'>UIMA-1586</a>] -         CFE - XMLBeans - use maven plugin to generate the parser
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1587'>UIMA-1587</a>] -         replace stax jar with better licensed geronimo version
@@ -290,6 +305,10 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1590'>UIMA-1590</a>] -         fix extractAndBuild scripts
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1594'>UIMA-1594</a>] -         make sandbox assembly build like base and uima-as builds
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1610'>UIMA-1610</a>] -         add a changeVersion build tool to handle changes needed in sandbox release 
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1613'>UIMA-1613</a>] -         run Rat consistently for all maven assemblies
 </li>
 </ul>
     
@@ -301,6 +320,8 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1021'>UIMA-1021</a>] -         implement OpenCalais service wrapper annotator
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1033'>UIMA-1033</a>] -         ConceptMapper--a highly configurable, token-based dictionary lookup UIMA component
+</li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1065'>UIMA-1065</a>] -         CFE - configurable feature extrator for UIMA annotation comparison, evaluation, testing, generation of machine learning features
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1095'>UIMA-1095</a>] -         Implement a Tika Annotator
 </li>
@@ -319,6 +340,8 @@ issues you find at
 </li>
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1461'>UIMA-1461</a>] -         update sandbox POMs to 2.3.0-incubating-SNAPSHOT version
 </li>
+<li>[<a href='https://issues.apache.org/jira/browse/UIMA-1614'>UIMA-1614</a>] -         update 2.3.0-incubating-SNAPSHOT to drop the snapshot in prep for release
+</li>
 </ul>
             
 <h2>        Wish
@@ -327,6 +350,7 @@ issues you find at
 <li>[<a href='https://issues.apache.org/jira/browse/UIMA-1469'>UIMA-1469</a>] -         Add Lucas to the sandbox home page
 </li>
 </ul>
+
 
                         
 </body>
