@@ -145,6 +145,7 @@ Release Notes - UIMA - Version 2.3S
     * [UIMA-1528] - The documentation describes still the UEAStemmer, which was removed from the distribution
     * [UIMA-1530] - Index naming is not unique in multithreaded scenarios
     * [UIMA-1533] - Lucas generated test-sources jar missing license, notice, disclaimer
+    * [UIMA-1535] - Lucas POM issues
     * [UIMA-1546] - Fix sandbox notice and license files
     * [UIMA-1547] - XML problems with simple server test cases
     * [UIMA-1551] - Lucas PearPackagingMavenPlugin PEAR classpath is incorrect
@@ -158,6 +159,10 @@ Release Notes - UIMA - Version 2.3S
     * [UIMA-1595] - Change build of Sandbox RegExpr to use xmlbean maven plugin, and delete its lib dir
     * [UIMA-1596] - fix sandbox build - use of <profile> for conditional not working for child projects
     * [UIMA-1597] - in sandbox common build, change needed to use assembly-bin instead of bin
+    * [UIMA-1605] - Fixed Findbugs issues
+    * [UIMA-1609] - binary assembly wrongly including FOP files
+    * [UIMA-1615] - make build-from-sources work
+    * [UIMA-1639] - Fixed bugs which disabled compiled dicts, static dict attributes
 
 ** Improvement
     * [UIMA-991] - fix Sandbox documentation to avoid overflowing the footer on even pages
@@ -172,6 +177,7 @@ Release Notes - UIMA - Version 2.3S
     * [UIMA-1486] - Lucas should not depend on google collections snapshot version
     * [UIMA-1498] - if an exception is rethrown, the original exception is not currently passed through
     * [UIMA-1501] - more refactoring and updating - parent POMs
+    * [UIMA-1506] - update Bean Scripting Framework Annotator with info about licenses and documentation
     * [UIMA-1517] - Don't set executable bits on non-executables, when building assemblies
     * [UIMA-1527] - Upgrade Tika Annotator for 2.3.0 release
     * [UIMA-1529] - Lucas depends on lucene 2.4.0, it should be lucene 2.4.1
@@ -182,16 +188,20 @@ Release Notes - UIMA - Version 2.3S
     * [UIMA-1559] - lucas.xsd exists 3 times in different places
     * [UIMA-1567] - Maven build: add <prerequisites> to uimaj to specify minimum Maven release level
     * [UIMA-1583] - Regularize Sandbox builds and assembly
+    * [UIMA-1585] - Run RAT on projects, fix missing licenses, add RAT running to POM, document exclusions
     * [UIMA-1586] - CFE - XMLBeans - use maven plugin to generate the parser
     * [UIMA-1587] - replace stax jar with better licensed geronimo version
     * [UIMA-1589] - CFE - add Readme describing how to regenerate the EMF generated files
     * [UIMA-1590] - fix extractAndBuild scripts
     * [UIMA-1594] - make sandbox assembly build like base and uima-as builds
+    * [UIMA-1610] - add a changeVersion build tool to handle changes needed in sandbox release 
+    * [UIMA-1613] - run Rat consistently for all maven assemblies
 
 ** New Feature
     * [UIMA-880] - Make PEAR installation path configurable in web.xml
     * [UIMA-1021] - implement OpenCalais service wrapper annotator
     * [UIMA-1033] - ConceptMapper--a highly configurable, token-based dictionary lookup UIMA component
+    * [UIMA-1065] - CFE - configurable feature extrator for UIMA annotation comparison, evaluation, testing, generation of machine learning features
     * [UIMA-1095] - Implement a Tika Annotator
     * [UIMA-1299] - Contribution of Lucene CAS Indexer
     * [UIMA-1371] - Performance improvement: remove reliance on Property class and excess String building to reduce in-memory dictionary size.
@@ -203,6 +213,7 @@ Release Notes - UIMA - Version 2.3S
 ** Task
     * [UIMA-1361] - Lucas: Convert documentation into docbook format
     * [UIMA-1461] - update sandbox POMs to 2.3.0-incubating-SNAPSHOT version
+    * [UIMA-1614] - update 2.3.0-incubating-SNAPSHOT to drop the snapshot in prep for release
 
 
 
